--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,12 @@ bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", defaul
 bevy_prototype_lyon = "0.11"
 layout-rs = "0.1"
 log = "0.4.20"
-steel-core = { path = "../../mattwparas/steel/crates/steel-core" }
-steel-derive= { path = "../../mattwparas/steel/crates/steel-derive" }
-steel-parser = { path = "../../mattwparas/steel/crates/steel-parser" }
+# steel-core = { path = "../../mattwparas/steel/crates/steel-core" }
+# steel-derive= { path = "../../mattwparas/steel/crates/steel-derive" }
+# steel-parser = { path = "../../mattwparas/steel/crates/steel-parser" }
+steel-core = "0.4.0"
+steel-derive = "0.4.0"
+steel-parser = "0.4.0"
 bevy_mod_debugdump = "0.10"
 thiserror = "1"
 rustyline = { version = "14", features = ["derive"] }
